--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "@sailshq/connect-redis": "^6.1.3",
+    "@sailshq/lodash": "^3.10.3",
+    "@sailshq/socket.io-redis": "^6.1.2",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "sails": "^1.5.9",
-    "grunt": "1.0.4",
     "sails-hook-grunt": "^5.0.0",
+    "sails-hook-organics": "^2.2.2",
     "sails-hook-orm": "^4.0.0",
     "sails-hook-sockets": "^3.0.0",
-    "@sailshq/connect-redis": "^6.1.3",
-    "@sailshq/socket.io-redis": "^6.1.2",
-    "@sailshq/lodash": "^3.10.3"
+    "sails-mysql": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "5.16.0"
